force-app/main/default/objects/Enrollment_Request__c/Enrollment_Request__c.object-meta.xml
<CustomObject>
    <label>Enrollment Request</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Enrollment Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollment Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>