force-app/main/default/objects/Enrollment_Request__c/fields/Currently_On_Therapy__c.field-meta.xml
<CustomField>
    <fullName>Currently_On_Therapy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Currently On Therapy</label>
    <type>Checkbox</type>
</CustomField>