force-app/main/default/objects/Enrollment_Request__c/fields/Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis__c</fullName>
    <label>Diagnosis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type 1 Diabetes</fullName>
            </value>
            <value>
                <fullName>Type 2 Diabetes</fullName>
            </value>
            <value>
                <fullName>Gestational Diabetes</fullName>
            </value>
            <value>
                <fullName>Congenital Heart Disease</fullName>
            </value>
            <value>
                <fullName>Arrhythmia</fullName>
            </value>
            <value>
                <fullName>Coronary Artery Disease</fullName>
            </value>
            <value>
                <fullName>Dilated Cardiomyopathy</fullName>
            </value>
            <value>
                <fullName>Myocardial Infarction</fullName>
            </value>
            <value>
                <fullName>Breast Cancer</fullName>
            </value>
            <value>
                <fullName>Prostate Cancer</fullName>
            </value>
            <value>
                <fullName>Basal Cell Cancer</fullName>
            </value>
            <value>
                <fullName>Melenoma</fullName>
            </value>
            <value>
                <fullName>Lung Cancer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>