force-app/main/default/objects/Enrollment_Request__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Enrollment Requests</relationshipLabel>
    <relationshipName>Enrollment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>