force-app/main/default/objects/Enrollment_Request__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Makana Diabetes</fullName>
            </value>
            <value>
                <fullName>Makana Cancer</fullName>
            </value>
            <value>
                <fullName>Makana Cardiovascular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>