force-app/main/default/objects/Enrollment_Request__c/listViews/New_Patient_Enrollment_Requests.listView-meta.xml
<ListView>
    <fullName>New_Patient_Enrollment_Requests</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Diagnosis__c</columns>
    <columns>Program__c</columns>
    <columns>Currently_On_Therapy__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>New Patient Enrollment Requests</label>
</ListView>